Update tmux.conf, try alternate install script

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,9 @@
 set -g mouse on
 
+# Set reloads
+unbind r
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "Tmux config reloaded!"
+
 # Set tmux prefix
 unbind C-b
 set -g prefix C-space
@@ -15,11 +19,15 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+# Prevent numbering gaps when deleting windows
+set -g renumber-windows on
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
+# Add tmuxinator for faster startup?
 
 # Colours
 set -g @plugin 'egel/tmux-gruvbox'
@@ -27,16 +35,32 @@ set -g @tmux-gruvbox 'dark'
 
 # Set vi-mode
 set-window-option -g mode-keys vi
+
 # Keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+# Easily switch between current and last session
+bind-key C-Space switch-client -l
+
+# Keep current path when creating new windows and splitting panes
+bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# Easy pane resize
+bind -r - resize-pane -D 15
+bind -r + resize-pane -U 15
+bind -r < resize-pane -L 15
+bind -r > resize-pane -R 15
+
 # Enable clear screen with prefix + C-l
 bind C-l send-keys 'C-l'
+
+# Quick pane launch session here?
+# Neovim Obsidian quick note
+# Neovim Obsidian home page
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
