--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -13,6 +13,8 @@ Plug 'machakann/vim-highlightedyank'
 Plug 'tpope/vim-commentary'
 " File tree explorer
 Plug 'preservim/nerdtree'
+nmap <leader>n :NERDTreeToggle<CR>
+let g:WhichKeyDesc_NERDTree_toggle = "<leader>n NERDTree Toggle"
 
 set which-key
 set timeoutlen=60000
@@ -54,9 +56,6 @@ nmap <leader>wh <C-w>h
 nmap <leader>wj <C-w>j
 nmap <leader>wk <C-w>k
 nmap <leader>wl <C-w>l
-
-" Use register h for global replace
-nmap <leader>s viw"hy:%s/\<<C-r>h\>/<C-r>h/gI<Left><Left><Left>
 
 """ IDE Mappings --------------------------------
 "" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
@@ -121,6 +120,9 @@ let g:WhichKeyDesc_close = "<leader>x Close"
 
 nmap <leader>xn <Action>(CloseAllNotifications)
 let g:WhichKeyDesc_close_notifications = "<leader>xn Close Notifications"
+
+nmap <leader>xo <Action>(CloseAllEditorsButActive)
+let g:WhichKeyDesc_close_other_tabs = "<leader>x Close Other Tabs"
 
 nmap <leader>xt <Action>(HideActiveWindow)
 let g:WhichKeyDesc_close_tool = "<leader>xt Close Tool"
@@ -206,12 +208,14 @@ nmap <c-=> <Action>(Unsplit)
 let g:WhichKeyDesc_zoom_all = "<leader>z Zoom All"
 let g:WhichKeyDesc_zoom = "z Zoom"
 
-
 nmap zc <Action>(CollapseRegion)
 let g:WhichKeyDesc_zoom_collapse_region = "zc Zoom Collapse Region"
 
 nmap zo <Action>(ExpandRegion)
 let g:WhichKeyDesc_zoom_open_region = "zo Zoom Open Region"
+
+nmap zz <Action>(ExpandCollapseToggleAction)
+let g:WhichKeyDesc_zoom_toggle_region = "zo Zoom Toggle Region"
 
 nmap <leader>zc <Action>(CollapseAllRegions)
 let g:WhichKeyDesc_zoom = "<leader>zc Zoom Collapse All Regions"
@@ -238,9 +242,11 @@ let g:WhichKeyDesc_bookmark_goto_next = "<leader>bn Bookmark Go To Next"
 nmap <leader>bp <Action>(GotoPreviousBookmark)
 let g:WhichKeyDesc_bookmark_goto_previous = "<leader>bp Bookmark Go To Previous"
 
-
+map H ^
+map L $
 map J }
 map K {
+
 map <leader>h <Action>(EditorCodeBlockStart)
 map <leader>l <Action>(EditorCodeBlockEnd)
 
